[gd_scene load_steps=7 format=3 uid="uid://daqbr6co5qr3x"]

[ext_resource type="Script" path="res://scripts/UI/MainMenuUI.gd" id="1_y4ive"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jyx1o"]
bg_color = Color(0.05, 0.05, 0.05, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhnv6"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qiylr"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Animation" id="Animation_xo8u2"]
resource_name = "intro"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitlePanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonsPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VersionLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3m4j3"]
_data = {
"intro": SubResource("Animation_xo8u2")
}

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4ive")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="TitlePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jyx1o")

[node name="TitleLabel" type="Label" parent="TitlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "2D杀鸡 - 非对称像素恐怖"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HostButton" type="Button" parent="ButtonsPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_vhnv6")
theme_override_styles/hover = SubResource("StyleBoxFlat_qiylr")
text = "创建游戏"

[node name="JoinButton" type="Button" parent="ButtonsPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_vhnv6")
theme_override_styles/hover = SubResource("StyleBoxFlat_qiylr")
text = "加入游戏"

[node name="SettingsButton" type="Button" parent="ButtonsPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_vhnv6")
theme_override_styles/hover = SubResource("StyleBoxFlat_qiylr")
text = "设置"

[node name="ExitButton" type="Button" parent="ButtonsPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_vhnv6")
theme_override_styles/hover = SubResource("StyleBoxFlat_qiylr")
text = "退出"

[node name="JoinPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jyx1o")

[node name="TitleLabel" type="Label" parent="JoinPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "加入游戏"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IPLabel" type="Label" parent="JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -70.0
offset_right = -50.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
text = "服务器IP:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="IPInput" type="LineEdit" parent="JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -70.0
offset_right = 160.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -20.0
offset_right = -50.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "端口:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PortInput" type="LineEdit" parent="JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_right = 160.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "7777"
placeholder_text = "7777"

[node name="ConnectButton" type="Button" parent="JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_vhnv6")
theme_override_styles/hover = SubResource("StyleBoxFlat_qiylr")
text = "连接"

[node name="BackButton" type="Button" parent="JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = -30.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_vhnv6")
theme_override_styles/hover = SubResource("StyleBoxFlat_qiylr")
text = "返回"

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jyx1o")

[node name="TitleLabel" type="Label" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "游戏设置"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicLabel" type="Label" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -70.0
offset_right = -50.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
text = "音乐音量:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -60.0
offset_right = 160.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="SFXLabel" type="Label" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -20.0
offset_right = -50.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "音效音量:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -10.0
offset_right = 160.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="FullscreenCheck" type="CheckBox" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 30.0
offset_right = 160.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
button_pressed = true
text = "全屏模式"

[node name="BackButton" type="Button" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -70.0
offset_right = 60.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_vhnv6")
theme_override_styles/hover = SubResource("StyleBoxFlat_qiylr")
text = "保存并返回"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = -10.0
grow_vertical = 0
text = "版本: 0.1"
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3m4j3")
} 